change config comments

--- a/fixrate.conf
+++ b/fixrate.conf
@@ -29,7 +29,7 @@ listener_type = unix
 ## config for unix listener type, ignored if use inet
 ## note that for some reasons postfix root path is under /var/spool/postfix/ directory,
 ## if you specify check_policy_service unix:/fixrate/fixrate.sock in main.cf file, postfix only looking
-## for socket file /ratelimit/fixrate.sock under /var/spool/postfix/ directory.
+## for socket file /fix/fixrate.sock under /var/spool/postfix/ directory.
 ## so socket file should be under /var/spool/postfix/
 ## REMEMBER to mkdir directory /var/spool/postfix/fix/ first
 
